--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ a {
 
 /* Início do CSS: Sessão de Início */
 
-section#hero {
+section#home {
     background-image: url('./images/security_guard_scanning.jpg');
     background-size: cover;
     background-position: top center;
@@ -33,7 +33,7 @@ section#hero {
     z-index: 1;
 }
 
-section#hero::after {
+section#home::after {
     position: absolute;
     left: 0px;
     top: 0px;
@@ -45,15 +45,14 @@ section#hero::after {
     z-index: -1;
 }
 
-section#hero div.hero_container {
+section#home div.home_container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0px 50px;
     justify-content: flex-start;
-    border: 1px solid red;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title {
+section#home div.home_container div.home_content h1.home_title {
     display: block;
     width: fit-content;
     font-size: 4rem;
@@ -64,23 +63,23 @@ section#hero div.hero_container div.hero_content h1.hero_title {
     animation-delay: 1.5s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title:nth-child(1) {
+section#home div.home_container div.home_content h1.home_title:nth-child(1) {
     animation-delay: 1s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title:nth-child(2) {
+section#home div.home_container div.home_content h1.home_title:nth-child(2) {
     animation-delay: 2s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title:nth-child(3) {
+section#home div.home_container div.home_content h1.home_title:nth-child(3) {
     animation-delay: 3s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title:nth-child(4) span.title_span {
+section#home div.home_container div.home_content h1.home_title:nth-child(4) span.title_span {
     animation-delay: 4s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title span.title_box {
+section#home div.home_container div.home_content h1.home_title span.title_box {
     position: absolute;
     left: 0px;
     top: 0px;
@@ -91,30 +90,30 @@ section#hero div.hero_container div.hero_content h1.hero_title span.title_box {
     animation-delay: 0.3s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title:nth-child(1) span.title_box {
+section#home div.home_container div.home_content h1.home_title:nth-child(1) span.title_box {
     animation-delay: 0.5s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title:nth-child(2) span.title_box {
+section#home div.home_container div.home_content h1.home_title:nth-child(2) span.title_box {
     animation-delay: 1.5s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title:nth-child(3) span.title_box {
+section#home div.home_container div.home_content h1.home_title:nth-child(3) span.title_box {
     animation-delay: 2.5s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title:nth-child(4) span.title_box {
+section#home div.home_container div.home_content h1.home_title:nth-child(4) span.title_box {
     animation-delay: 3.5s;
 }
 
-section#hero div.hero_container div.hero_content h1.hero_title span.title_span {
+section#home div.home_container div.home_content h1.home_title span.title_span {
     font-weight: 700;
     color: transparent;
     animation: title_span_reveal 0.5s ease forwards;
     animation-delay: 1.5s;
 }
 
-section#hero div.hero_container div.hero_content a.cta_button {
+section#home div.home_container div.home_content a.cta_button {
     display: inline-block;
     padding: 10px 30px;
     color: #B1BECD;
@@ -128,7 +127,7 @@ section#hero div.hero_container div.hero_content a.cta_button {
     transition-property: background-color;
 }
 
-section#hero div.hero_container div.hero_content a.cta_button:hover {
+section#home div.home_container div.home_content a.cta_button:hover {
     background-color: #354B6C;
 }
 
@@ -137,22 +136,16 @@ section#hero div.hero_container div.hero_content a.cta_button:hover {
 /* Início do CSS: Keyframes da página */
 
 @keyframes title_reveal_box {
-
     50% { width: 100%; left: 0%; }
     100% { width: 0%; left: 100%; }
-
 }
 
 @keyframes title_reveal {
-
     100% { color: #B1BECD;  }
-
 }
 
 @keyframes title_span_reveal {
-
     100% { color: #496D96; }
-
 }
 
 /* Fim do CSS: Keyframes da página */
